# py-design

./: .gitignore  README.md  meson.build  pyproject.toml  setup.py
demos/: demo1.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  demo15.py  demo16.py  demo17.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py
design/: __init__.py
src/: faure.f90  halton.f90  hammersley.f90  ihs.f90  lambert.f90  latin_center.f90  latin_cover.f90  latin_edge.f90  latin_random.f90  latinize.f90  sandia_sparse.f90  sobol.f90
unittests/: test1.py
